--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@
 
   <section class="modal-section">
     <div class="container">
-      <form id="update-form" onsubimit="updateHandle">
-        <input type="text" name="">
+      <form id="update-form" onsubmit="overwrite(event)">
+        <input class="update-input" type="text">
         <button type="submit">Update</button>
       </form>
     </div>
