add test.js file

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
   <section>
     <div class="container">
-      <form onsubmit="submitHandle(event)">
+      <form onsubmit="submitTask(event)">
         <h3>What you want to do?</h3>
         <div>
           <input id="title" name="title" type="text" placeholder="Enter Task" />
